# zksnark-rs-near

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  package.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
contracts/: Cargo.toml  README.md  package.json
contracts/proof/: Cargo.toml
contracts/proof/src/: lib.rs
contracts/res/: proof.wasm  setup.wasm
contracts/setup/: Cargo.toml
contracts/setup/src/: lib.rs
contracts/simple/: Cargo.toml  README.md  package.json
contracts/simple/src/: lib.rs
output/: simple.setup.bin.hex
res/: zksnark.wasm
simple_lib/: Cargo.toml
simple_lib/src/: lib.rs
src/: lib.rs  proof_file.rs  serialization.rs  setup_file.rs
src/groth16/: mod.rs
zksnark/: Cargo.toml
zksnark/src/: proof_file.rs  setup_file.rs
zksnark/src/field/: mod.rs
zksnark/src/groth16/: coefficient_poly.rs  fr.rs  mod.rs
