[package]
name = "cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
zksnark = { version = "^0", path = "../zksnark" }
near-sdk = "4"
