[package]
name = "simple_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
getrandom = { git = "https://github.com/peteoleary/getrandom" }

[dependencies]
borsh = { version = "0.9.3"}
serde = { version = "1", features = ["derive"] }
# rand = "0.8.5"
getrandom = { version="0.2.6", features = ["noop"] }
rand = "0.8.5"