[package]
name = "setup"
version = "1.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
getrandom = { git = "https://github.com/peteoleary/getrandom" }

[dependencies]
getrandom = { version="0.2.6", features = ["noop"] }
zksnark = { path = "../../zksnark" }
near-sdk = "4"
serde = "1.0"

[dev-dependencies]
anyhow = "1.0"
near-units = "0.2.0"
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.3"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
