[package]
name = "simple"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
getrandom = { git = "https://github.com/peteoleary/getrandom" }

[dependencies]
getrandom = { version="0.2.6", features = ["noop"] }
near-sdk = "4"
rabe-bn = { git = "https://github.com/peteoleary/rabe-bn", branch = "master" }
simple_lib = { path = "../../simple_lib" }
rand = "0.8.5"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
